--- a/automation/collections/requirements.yaml
+++ b/automation/collections/requirements.yaml
@@ -5,7 +5,7 @@ collections:
   # source
 
   ## https://github.com/ansible-collections/kubernetes.core/releases
-  - name: kubernetes.core
+  - name: community.kubernetes
     version: 2.3.2
   # source
   ## https://galaxy.ansible.com/awx/awx
