--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -1,13 +1,5 @@
 ---
-- name: RETRIEVE WORKER NODE DETAILS FROM KUBERNETES NODE
-  hosts: localhost
-  gather_facts: no
-
-  collections: 
-    - community.kubernetes
-  
-  tasks:
-  - name: GET WORKER NODE DETAILS
-    community.kubernetes.k8s_info:
-      kind: Node
-      namespace: default 
+- name: Get a list of all pods from any namespace
+  kubernetes.core.k8s_info:
+    kind: Pod
+  register: pod_list
