--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -2,6 +2,8 @@
 - name: Playbook for Using a Variety of Tower Modules
   hosts: nodes
   gather_facts: false
+  collections: 
+    - kubernetes.core
 
   tasks:
 
