--- a/automation/collections/requirements.yaml
+++ b/automation/collections/requirements.yaml
@@ -2,5 +2,6 @@
 ollections:
   - name: kubernetes.core
     version: 2.3.2
+  - name: community.kubernetes
   - name: awx.awx
   - name: community.general
