--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -11,6 +11,7 @@
     packages:
       name: python-pip
       state: present
+    becomes: yes
 
   - name: Get a list of all pods from any namespace
     community.kubernetes.k8s_info:
