--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -7,6 +7,6 @@
   tasks:
 
   - name: Ensure Pip is installed
-    ansible.builtin.packages:
+    ansible.builtin.package:
       name: python-pip
       state: present
