--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -8,5 +8,5 @@
 
   - name: Ensure Pip is installed
     ansible.builtin.package:
-      name: python-pip
+      name: python3-pip
       state: present
