--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -10,3 +10,8 @@
     ansible.builtin.package:
       name: python3-pip
       state: present
+
+  - name: Ensure Kubernetes is installed
+    pip:
+      name: Kubernetes
+      state: present
