--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -3,7 +3,9 @@
   hosts: nodes
   gather_facts: false
   become: true
-
+	collections: 
+	  - community.kubernetes
+    
   tasks:
 
   - name: Ensure Pip is installed
@@ -15,3 +17,8 @@
     pip:
       name: Kubernetes
       state: present
+
+	- name: Get a list of all pods from any namespace
+	  community.kubernetes.k8s_info:
+	    kind: pods
+	  register: pods_list
