--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -20,6 +20,6 @@
       state: present
 
   - name: Get a list of all pods from any namespace
-    community.kubernetes.k8s_info:
+    kubernetes.core.k8s_info:
       kind: pods
     register: pods_list
