--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -1,6 +1,6 @@
 ---
 - name: Playbook for Using a Variety of Tower Modules
-  hosts: nodes
+  hosts: master
   gather_facts: false
   become: true
 
