--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -2,6 +2,7 @@
 - name: Playbook for Using a Variety of Tower Modules
   hosts: master
   gather_facts: false
+  connection: local
   
 
   collections:
