--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -18,7 +18,7 @@
   - name: Ensure Kubernetes is installed
     pip:
       name: 
-        - Kubernetes
+        - Kubernetes==11
         - PyYAML
       state: present
     become: true
@@ -26,6 +26,5 @@
   - name: Get a list of all pods from any namespace
     kubernetes.core.k8s_info:
       kind: pods
-      impersonate_user: vagrant
     register: pods_list
     
