--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -25,7 +25,7 @@
 
   - name: Get a list of all pods from any namespace
     kubernetes.core.k8s_info:
-      kind: pod
+      kind: Pod
     register: pods_list
     
   - name: View Results
