--- a/automation/playbooks/pb_test_setup.yml
+++ b/automation/playbooks/pb_test_setup.yml
@@ -25,7 +25,8 @@
 
   - name: Get a list of all pods from any namespace
     kubernetes.core.k8s_info:
-      kind: Pod
+      kind: Node
+      namespace: default
     register: pods_list
     
   - name: View Results
