--- a/automation/.ansible.cfg
+++ b/automation/.ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 
 roles_path = ./roles
-vault_identity_list = dev@~/.vault_pass_dev, prod@~/.vault_pass_prod
+vault_identity_list = admin@.vault-password k8s_secret.yaml
