--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -1,4 +1,8 @@
 ---
+- name: Playbook for test secrets
+  hosts: localhost
+  gather_facts: false
+
 - name: Use vault variables
   hosts: databases
   vars_files: k8s_secret.yaml 
