--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Playbook for test secrets
-  hosts: all
+  hosts: localhost
+  connection: local
   gather_facts: false
 
 - name: Use vault variables
