--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -2,7 +2,7 @@
 
 - name: Use vault variables
   hosts: localhost
-  vars_files: k8s_secret.yaml 
+  vars_files: vars/k8s_secret.yaml 
   tasks:
 
   - name: Show vault variable value
