--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -1,10 +1,17 @@
 ---
+- hosts: localhost
+  connection: local
+  gather_facts: no
 
-- name: Use vault variables
-  hosts: localhost
-  vars_files: vars/k8s_secret.yaml 
+  vars_files:
+    - vars/k8s_secret.yaml
+
   tasks:
+  - name: Echo the BIGIP password
+    shell: echo $BIGIP_PASSWD
+    environment: 
+      $BIGIP_PASSWD: "{{bigip_passwd}}"
+    register: echo_results
 
-  - name: Show vault variable value
-    debug:
-      var: bigip_password
+  - name: Show the echo_result
+    debug: var = echo_result.stdout
