--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -4,7 +4,7 @@
   gather_facts: no
 
   vars_files:
-    - vars/k8s_secret.yaml
+    - ./vars/k8s_secret.yaml
 
   tasks:
   - name: Echo the BIGIP password
