--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -1,17 +1,17 @@
 ---
 - hosts: localhost
   connection: local
-  gather_facts: no
+  gather_facts: false
 
   vars_files:
     - ../vars/k8s_secret.yaml
 
   tasks:
-  - name: Echo the BIGIP password
-    shell: echo $BIGIP_PASSWD
-    environment: 
-      $BIGIP_PASSWD: "{{bigip_passwd}}"
-    register: echo_results
+    - name: Echo the BIGIP password
+      shell: echo $BIGIP_PASSWD
+      environment: 
+        $BIGIP_PASSWD: "{{bigip_passwd}}"
+      register: echo_result
 
-  - name: Show the echo_result
-    debug: var=echo_results.stdout
+    - name: Show the echoresult
+      debug: var=echo_result.stdout
