--- a/automation/playbooks/secrets_test.yaml
+++ b/automation/playbooks/secrets_test.yaml
@@ -10,8 +10,8 @@
     - name: Echo the BIGIP password
       shell: echo $BIGIP_PASSWD
       environment: 
-        $BIGIP_PASSWD: "{{bigip_passwd}}"
+        BIGIP_PASSWD: "{{ bigip_passwd }}"
       register: echo_result
 
-    - name: Show the echoresult
+    - name: Show the echo result
       debug: var=echo_result.stdout
