--- a/automation/playbooks/deploy.ingresslink-externaldns.yaml
+++ b/automation/playbooks/deploy.ingresslink-externaldns.yaml
@@ -8,4 +8,7 @@
     vs_name: cafe.laptop.local
 
   tasks:
-    - name: Install CIS
+    - name: BIG-IP credentials as Kubernetes Secrets
+      ansible.builtin.command: 
+        cmd: kubectl create secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
+
