--- a/automation/ansible.cfg
+++ b/automation/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
+collections_paths = collections
 roles_path = roles
-inventory = ./inventory
+nocows = true
+inventory = inventory
+interpreter_python = auto_silent
+host_key_checking = False
