--- a/automation/roles/install_cis/tasks/main.yml
+++ b/automation/roles/install_cis/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: BIG-IP credentials as Kubernetes Secrets
   ansible.builtin.command: 
     cmd: kubectl create secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
+  ignore_errors: true
 
 - name: Create CRD Schema
   kubernetes.core.k8s:
