--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -22,6 +22,7 @@
         name: 
           - Kubernetes>=12.0.0
           - PyYAML
+          - kubernetes-validate
         state: present
       become: true 
 
