--- a/automation/roles/install_cis/tasks/main.yml
+++ b/automation/roles/install_cis/tasks/main.yml
@@ -8,6 +8,6 @@
 - name: Create CRD Schema
   kubernetes.core.k8s:
     state: present 
-    definition: "{{ lookup('file', 'files/bigip-ctlr-clusterrole.yaml') | from_yaml }}"
+    definition: "{{ lookup('file', 'files/bigip-ctlr-clusterrole.yaml') | from_yaml_all }}"
     validate:
       fail_on_error: yes
