--- a/automation/roles/install_cis/tasks/main.yml
+++ b/automation/roles/install_cis/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for roles/install_cis
 - name: BIG-IP credentials as Kubernetes Secrets
   ansible.builtin.command: 
-    cmd: kubectl create secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
+    cmd: kubectl "{{secret_state}}" secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
   ignore_errors: true
 
 - name: Modify Service Account, Cluster Role and Cluster Role Binding
