--- a/automation/roles/install_cis/tasks/main.yml
+++ b/automation/roles/install_cis/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks file for roles/install_cis
-- name: BIG-IP credentials as Kubernetes Secrets
-  ansible.builtin.command: 
-    cmd: kubectl "{{secret_state}}" secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
-  ignore_errors: true
+#- name: BIG-IP credentials as Kubernetes Secrets
+#  ansible.builtin.command: 
+#    cmd: kubectl "{{secret_state}}" secret generic bigip-login -n kube-system --from-literal=username=admin --from-literal=password="{{ bigip_passwd }}"
+#  ignore_errors: true
 
 - name: Modify Service Account, Cluster Role and Cluster Role Binding
   kubernetes.core.k8s:
@@ -11,3 +11,31 @@
     definition: "{{ lookup('file', 'files/bigip-ctlr-clusterrole.yaml') | from_yaml_all }}"
     validate:
       fail_on_error: yes
+
+- name: Modify CRD Schea
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/customresourcedefinitions.yaml') | from_yaml_all }}"
+    validate:
+      fail_on_error: yes
+
+- name: Modify BIGIP CTRL Manifest
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/f5-bigip-ctlr-deployment.yaml') | from_yaml_all }}"
+    validate:
+      fail_on_error: yes
+
+- name: Modify BIGIP CTRL Manifest
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/f5-bigip-ctlr-deployment.yaml') | from_yaml_all }}"
+    validate:
+      fail_on_error: yes 
+
+- name: Modify Kubernetes Tunnel configuration
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/f5-bigip-node.yaml') | from_yaml_all }}"
+    validate:
+      fail_on_error: yes     
