--- a/automation/delete.ingresslink-externaldns.yaml
+++ b/automation/delete.ingresslink-externaldns.yaml
@@ -31,3 +31,6 @@
     - name: CIS Install 
       import_role:
         name: install_cis
+    - name: NGINX CRDs
+      import_role:
+        name: roles/nginx_common_resources
