--- a/automation/roles/nginx_common_resources/tasks/main.yml
+++ b/automation/roles/nginx_common_resources/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
 # tasks file for roles/nginx_common_resources
+- name: Modify NINGX Virtual Server
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/{{item}') | from_yaml_all }}"  
+    validate:
+      fail_on_error: yes 
+    with_items: "{{k8s.nginx.org_virtualservers.yaml}}"
