--- a/automation/roles/nginx_common_resources/tasks/main.yml
+++ b/automation/roles/nginx_common_resources/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Modify NINGX Virtual Server
   kubernetes.core.k8s:
     state: "{{ package_state }}"
-    definition: "{{ lookup('file', 'files/{{item}') | from_yaml_all }}"  
+    definition: "{{ lookup('file', 'files/{{item}}') | from_yaml_all }}"  
     validate:
       fail_on_error: yes 
     with_items: "{{k8s.nginx.org_virtualservers.yaml}}"
