--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -28,6 +28,9 @@
         state: present
       become: true 
 
-    - name: CIS Install 
+#    - name: CIS Install 
+#      import_role:
+#        name: install_cis
+    - name: NGINX CRDs
       import_role:
-        name: install_cis
+        name: roles/nginx_common_resources
