--- a/automation/roles/nginx_common_resources/tasks/main.yml
+++ b/automation/roles/nginx_common_resources/tasks/main.yml
@@ -1,14 +1,11 @@
 ---
 # tasks file for roles/nginx_common_resources
-- name: Modify NINGX Virtual Server
+- name: Modify NGINX IC custom resource definitions for VirtualServer and VirtualServerRoute, TransportServer and Policy resources
   kubernetes.core.k8s:
     state: "{{ package_state }}"
-    definition: "{{ lookup('file', 'files/k8s.nginx.org_virtualservers.yaml') | from_yaml_all }}"  
-
-
-- name: Modify NINGX Virtual Server Route
-  kubernetes.core.k8s:
-    state: "{{ package_state }}"
-    definition: "{{ lookup('file', 'files/k8s.nginx.org_virtualserverroutes.yaml') | from_yaml_all }}"  
-    validate:
-      fail_on_error: yes 
+    definition: "{{ lookup('file', 'files/{{item}}.yaml') | from_yaml_all }}"  
+  with_items: 
+    - k8s.nginx.org_virtualservers
+    - k8s.nginx.org_virtualserverroutes
+    - k8s.nginx.org_transportservers
+    - k8s.nginx.org_policies
