--- a/automation/roles/deploy_cafe/tasks/main.yml
+++ b/automation/roles/deploy_cafe/tasks/main.yml
@@ -2,6 +2,7 @@
 # tasks file for roles/deploy_cafe
 - name: Manage Cafe APP Deployment
   kubernetes.core.k8s:
+    namespace: default
     state: "{{ package_state }}"
     definition: "{{ lookup('file', 'files/{{item}}.yaml') | from_yaml_all }}"  
   with_items: 
