--- a/automation/roles/manage-ingresslink-dns/files/edns-cafe.yaml
+++ b/automation/roles/manage-ingresslink-dns/files/edns-cafe.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     f5cr: "true"
 spec:
-  domainName: cafe.example.com
+  domainName: cafe.laptop.local
   dnsRecordType: A
   loadBalanceMethod: round-robin
   pools:
@@ -16,11 +16,11 @@ spec:
     monitors:
     - interval: 10
       recv: ""
-      send: "GET /tea HTTP/1.1\r\nHost: cafe.example.com\r\n"
+      send: "GET /tea HTTP/1.1\r\nHost: cafe.laptop.local\r\n"
       timeout: 31
       type: https
     - interval: 10
       recv: ""
-      send: "GET /coffee HTTP/1.1\r\nHost: cafe.example.com\r\n"
+      send: "GET /coffee HTTP/1.1\r\nHost: cafe.laptop.local\r\n"
       timeout: 31
       type: https
