--- a/automation/roles/deploy_cafe/files/cafe-ingress.yaml
+++ b/automation/roles/deploy_cafe/files/cafe-ingress.yaml
@@ -9,10 +9,10 @@ spec:
   # ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
   - hosts:
-    - cafe.example.com
+    - cafe.laptop.local
     secretName: cafe-secret
   rules:
-  - host: cafe.example.com
+  - host: cafe.laptop.local
     http:
       paths:
       - path: /tea
