--- a/automation/roles/manage-ingresslink-dns/files/edns-cafe.yaml
+++ b/automation/roles/manage-ingresslink-dns/files/edns-cafe.yaml
@@ -12,7 +12,7 @@ spec:
   pools:
   - dnsRecordType: A
     loadBalanceMethod: round-robin
-    dataServerName: /Common/k8s
+    dataServerName: /Common/bigip1.laptop.test
     monitors:
     - interval: 10
       recv: ""
