--- a/automation/delete.ingresslink-externaldns.yaml
+++ b/automation/delete.ingresslink-externaldns.yaml
@@ -13,9 +13,26 @@
     secret_state: delete
 
   tasks:
+    - name: Create a nginx-ingress namespace
+      kubernetes.core.k8s:
+        name: nginx-ingress
+        kind: Namespace
+        state: "{{package_state}}"
+
+    - name: NGINX JWT in a Docker Config Secret
+      ansible.builtin.command: 
+        cmd: kubectl create secret docker-registry regcred -n nginx-ingress
+      ignore_errors: true
+
+    - name: BIG-IP credentials as Kubernetes Secrets
+      ansible.builtin.command: 
+        cmd: kubectl delete secret generic bigip-login -n kube-system 
+      ignore_errors: true
+
     - name: CIS  
       import_role:
         name: install_cis
+
     - name: NGINX IC
       import_role:
         name: install_nic
