--- a/automation/roles/install_nic/files/nginx-ingress.yaml
+++ b/automation/roles/install_nic/files/nginx-ingress.yaml
@@ -19,10 +19,10 @@ spec:
       serviceAccountName: nginx-ingress 
       imagePullSecrets: 
       - name: regcred 
-      containers: 
-      - image: private-registry.nginx.com/nginx-ic/nginx-plus-ingress:2.2.0 
-        imagePullPolicy: Always
-        name: nginx-ingress
+      containers:
+      - image: private-registry.nginx.com/nginx-ic/nginx-plus-ingress:2.3.0
+        imagePullPolicy: IfNotPresent
+        name: nginx-plus-ingress
         ports:
         - name: http
           containerPort: 80
