--- a/automation/roles/install_nic/files/nginx-ingress.yaml
+++ b/automation/roles/install_nic/files/nginx-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx-ingress
   namespace: nginx-ingress
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: nginx-ingress
@@ -12,13 +12,11 @@ spec:
     metadata:
       labels:
         app: nginx-ingress
-     #annotations:
-       #prometheus.io/scrape: "true"
-       #prometheus.io/port: "9113"
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9113"
     spec:
-      serviceAccountName: nginx-ingress 
-      imagePullSecrets: 
-      - name: regcred 
+      serviceAccountName: nginx-ingress
       containers:
       - image: private-registry.nginx.com/nginx-ic/nginx-plus-ingress:2.3.0
         imagePullPolicy: IfNotPresent
@@ -30,8 +28,10 @@ spec:
           containerPort: 443
         - name: readiness-port
           containerPort: 8081
-       #- name: prometheus
-         #containerPort: 9113
+        - name: dashboard
+          containerPort: 9000
+        - name: prometheus
+          containerPort: 9113
         readinessProbe:
           httpGet:
             path: /nginx-ready
@@ -55,12 +55,18 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         args:
+          - -nginx-plus
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
           - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
-          - -ingresslink=nginx-ingress
-          - -report-ingress-status
+          - -nginx-status-port=9000
+          - -nginx-status-allow-cidrs=0.0.0.0/0
+          - -enable-snippets
+         #- -enable-app-protect
          #- -v=3 # Enables extensive logging. Useful for troubleshooting.
-         #- -report-ingress-status
+          - -report-ingress-status
          #- -external-service=nginx-ingress
-         #- -enable-prometheus-metrics
+          - -enable-prometheus-metrics
+          - -enable-latency-metrics
          #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
+      imagePullSecrets:
+        - name: regcred
