--- a/automation/roles/install_nic/tasks/main.yml
+++ b/automation/roles/install_nic/tasks/main.yml
@@ -11,7 +11,17 @@
     - k8s.nginx.org_policies
     - ns-and-sa
     - rbac
+    - ap-rbac.yaml
+    - apdos-rbac.yaml
     - default-server-secret
+    - appprotect.f5.com_aplogconfs
+    - appprotect.f5.com_appolicies
+    - appprotect.f5.com_apusersigs
+    - appprotectdos.f5.com_apdoslogconfs
+    - appprotectdos.f5.com_apdospolicy
+    - appprotectdos.f5.com_dosprotectedresources
+    - appprotect-dos-arb.yaml
+    - appprotect-dos-arb-svc.yaml
     - nginx-config
     - ingress-class
     - nginx-ingress
