--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -36,7 +36,7 @@
 
     - name: NGINX JWT in a Docker Config Secret
       ansible.builtin.command: 
-        cmd: kubectl create secret docker-registry regcred --docker-server=private-registry.nginx.com --docker-username=$myJWT --docker-password=none -n nginx-ingress
+        cmd: kubectl create secret docker-registry regcred --docker-server=private-registry.nginx.com --docker-username={{nginx_jwt}} --docker-password=none -n nginx-ingress
       ignore_errors: true
       no_log: true
 
