--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -9,3 +9,11 @@
     - cafe
     - cafe-secret
     - cafe-ingress
+
+- name: Manage Ingresslink and ExternalDNS CRD
+  kubernetes.core.k8s:
+    state: "{{ package_state }}"
+    definition: "{{ lookup('file', 'files/{{item}}.yaml') | from_yaml_all }}"  
+  with_items: 
+    - vs-ingresslink
+    - edns-cafe
