app protect update 3-14

--- a/automation/deploy.ingresslink-externaldns.yaml
+++ b/automation/deploy.ingresslink-externaldns.yaml
@@ -55,7 +55,8 @@
         name: manage_nic_deployment
 
     - name: Syslog
-      import_role: manage_syslog_deployment
+      import_role: 
+        name: manage_syslog_deployment
 
     - name: Cafe APP
       import_role:
