--- a/automation/roles/manage_app_deployment/files/cafe.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe.yaml
@@ -14,9 +14,9 @@ spec:
     spec:
       containers:
       - name: coffee
-        image: pleshakov/nginx-hello:0.1
+        image: nginxdemos/hello:plain-text
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -25,7 +25,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 80
     protocol: TCP
     name: http
   selector:
@@ -47,9 +47,9 @@ spec:
     spec:
       containers:
       - name: tea 
-        image: pleshakov/nginx-hello:0.1
+        image: nginxdemos/hello:plain-text
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -59,7 +59,7 @@ metadata:
 spec:
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 80
     protocol: TCP
     name: http
   selector:
