--- a/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
@@ -1,15 +1,12 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: cafe-ingress
+  # use annotations with k8s version < 1.18.0
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    appprotect.f5.com/app-protect-policy: "default/dataguard-alarm"
-    appprotect.f5.com/app-protect-enable: "True"
-    appprotect.f5.com/app-protect-security-log-enable: "True"
-    appprotect.f5.com/app-protect-security-log: "default/logconf"
-    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=syslog-svc.default:514"
+    kubernetes.io/ingress.class: nginx
 spec:
+  # ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
   - hosts:
     - cafe.laptop.local
@@ -19,16 +16,10 @@ spec:
     http:
       paths:
       - path: /tea
-        pathType: Prefix
         backend:
-          service:
-            name: tea-svc
-            port:
-              number: 80
+          serviceName: tea-svc
+          servicePort: 80
       - path: /coffee
-        pathType: Prefix
         backend:
-          service:
-            name: coffee-svc
-            port:
-              number: 80
+          serviceName: coffee-svc
+          servicePort: 80
