--- a/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
@@ -5,11 +5,11 @@ metadata:
   # use annotations with k8s version < 1.18.0
   annotations:
     kubernetes.io/ingress.class: "nginx"
-#    appprotect.f5.com/app-protect-policy: "default/dataguard-alarm"
-#    appprotect.f5.com/app-protect-enable: "True"
-#    appprotect.f5.com/app-protect-security-log-enable: "True"
-#    appprotect.f5.com/app-protect-security-log: "default/logconf"
-#    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=syslog-svc.default:514" 
+    appprotect.f5.com/app-protect-policy: "default/dataguard-alarm"
+    appprotect.f5.com/app-protect-enable: "True"
+    appprotect.f5.com/app-protect-security-log-enable: "True"
+    appprotect.f5.com/app-protect-security-log: "default/logconf"
+    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=syslog-svc.default:514" 
 spec:
   # ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
