--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -61,7 +61,7 @@ spec:
           - -nginx-status-port=9000
           - -nginx-status-allow-cidrs=0.0.0.0/0
           - -enable-snippets
-         #- -enable-app-protect
+          - -enable-app-protect
          #- -v=3 # Enables extensive logging. Useful for troubleshooting.
           - -report-ingress-status
          #- -external-service=nginx-ingress
