--- a/automation/roles/manage_app_deployment/files/cafe-secret.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
   name: cafe-secret
 type: kubernetes.io/tls
+stringData:
   config.yaml: |
     data:
       tls.crt: "{{app-cert}}"
