--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -13,6 +13,11 @@
     secret_state: create
 
   tasks:
+    - name: Cafe Secret
+      ansible.builtin.command: 
+        cmd: kubectl create secret docker-registry regcred --docker-server=private-registry.nginx.com --docker-username="{{nginx_jwt}}" --docker-password=none -n nginx-ingress
+      ignore_errors: true
+      no_log: true      
     - name: Cafe APP
       import_role:
         name: manage_app_deployment
