--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -17,7 +17,7 @@
   tasks:
     - name: Cafe Secret
       ansible.builtin.command: 
-        cmd: kubectl create secret tls cafe-secret --cert="{{cafe-app.crt}}" --key="{{cafe-app.key}}"
+        cmd: kubectl create secret tls cafe-secret --cert={{cafe-app.crt}} --key="{{cafe-app.key}}"
       ignore_errors: true
       #no_log: true 
               
