--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -62,6 +62,7 @@ spec:
           - -nginx-status-allow-cidrs=0.0.0.0/0
           - -enable-snippets
           - -enable-app-protect
+          - -app-protect-log-level info
          #- -v=3 # Enables extensive logging. Useful for troubleshooting.
           - -report-ingress-status
          #- -external-service=nginx-ingress
