--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -14,6 +14,12 @@
     secret_state: create
 
   tasks:
+    - name: NGINX JWT in a Docker Config Secret
+      ansible.builtin.command: 
+        cmd: kubectl create secret tls cafe-secret --cert="{{app-crt}}" --key "{{app-key}}"
+      ignore_errors: true
+      no_log: true
+
     - name: Cafe APP
       import_role:
         name: manage_app_deployment
