--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -16,7 +16,7 @@
   tasks:
     - name: NGINX JWT in a Docker Config Secret
       ansible.builtin.command: 
-        cmd: kubectl create secret tls cafe-secret --cert="{{app-crt}}" --key "{{app-key}}"
+        cmd: kubectl create secret tls cafe-secret --cert="{{app-crt}}" --key="{{app-key}}"
       ignore_errors: true
       #no_log: true
 
