--- a/automation/roles/manage_app_deployment/files/cafe-secret.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-secret.yaml
@@ -4,5 +4,7 @@ metadata:
   name: cafe-secret
 type: kubernetes.io/tls
 stringData:
-  tls.crt: "{{app-cert | string | b64encode }}"
-  tls.key: "{{app-key | string | b64encode }}"
+  tls.crt: |
+    "{{app-cert}}"
+  tls.key: |
+    "{{app-key}}"
