--- a/automation/roles/manage_app_deployment/files/cafe-secret.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: cafe-secret
 type: kubernetes.io/tls
-stringData:
+data:
   tls.crt: |
-    "{{app-cert}}"
+    $("{{app-cert}}" | base64)
   tls.key: |
-    "{{app-key}}"
+    $("{{app-key}}" | base64}
