--- a/automation/roles/manage_app_deployment/files/cafe-secret.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: cafe-secret
 type: kubernetes.io/tls
-data:
+StringData:
   tls.crt: |
-    $("{{app-cert}}" | base64)
+    "{{app-cert}}"
   tls.key: |
-    $("{{app-key}}" | base64}
+    "{{app-key}}"
