--- a/automation/roles/manage_app_deployment/files/cafe-secret.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-secret.yaml
@@ -4,7 +4,5 @@ metadata:
   name: cafe-secret
 type: kubernetes.io/tls
 stringData:
-  tls.crt: |
-    "{{app-cert}}"
-  tls.key: |
-    "{{app-key}}"
+  tls.crt:  "{{app-cert}}"
+  tls.key: "{{app-key}}"
