--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -7,7 +7,7 @@
     definition: "{{ lookup('file', 'files/{{item}}.yaml') | from_yaml_all }}"  
   with_items: 
     - cafe
-    - cafe-secret.old
+    - cafe-secret.org
     - ap-dataguard-alarm-policy
     - ap-logconf
     - ap-apple-uds
