--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -14,9 +14,9 @@
     secret_state: create
 
   tasks:
-    - name: Cafe Secter 
+    - name: Cafe Secret
       ansible.builtin.command: 
-        cmd: kubectl create secret tls cafe-secret --cert=../vars/cafe.laptop.local.crt --key=../vars/cafe.laptop.local.key
+        cmd: kubectl create secret tls cafe-secret --cert="../vars/cafe.laptop.local.crt" --key="../vars/cafe.laptop.local.key"
       ignore_errors: true
       no_log: true
 
