--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -16,7 +16,7 @@
   tasks:
     - name: Cafe Secret
       ansible.builtin.command: 
-        cmd: kubectl create secret tls cafe-secret --cert=vars/cafe.laptop.local.crt --key=vars/cafe.laptop.local.key
+        cmd: kubectl create secret tls cafe-secret --cert="{{ lookup('file', 'vars/cafe.laptop.local.crt') }}"  --key="{{ lookup('file', 'vars/cafe.laptop.local.key') }}"
       ignore_errors: true
 #      no_log: true
 
