--- a/automation/deploy.cafe.app.yaml
+++ b/automation/deploy.cafe.app.yaml
@@ -16,7 +16,7 @@
   tasks:
     - name: Cafe Secret
       ansible.builtin.command: 
-        cmd: kubectl create secret tls cafe-secret --cert="{{aap-crt}}" --key"{{app-key}}"
+        cmd: kubectl create secret tls cafe-secret --cert="{{app-crt}}" --key"{{app-key}}"
       ignore_errors: true
 #      no_log: true
 
