--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 # tasks file for roles/deploy_cafe
 
+- name: Cafe Secret
+  ansible.builtin.command: 
+    cmd: kubectl create secret tls cafe-secret --cert="{{ lookup('file', 'files/cafe.laptop.local.crt}}" --key="{{ lookup('file', 'files/cafe.laptop.local.key}}"
+  ignore_errors: true
+
 - name: Manage Cafe APP Deployment
   kubernetes.core.k8s:
     namespace: default
