--- a/automation/roles/manage_app_deployment/tasks/main.yml
+++ b/automation/roles/manage_app_deployment/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: Cafe Secret
   ansible.builtin.command: 
-    cmd: kubectl create secret tls cafe-secret --cert=vars/cafe.laptop.local.crt --key=vars/cafe.laptop.local.key
+    cmd: kubectl create secret tls cafe-secret --cert=../vars/cafe.laptop.local.crt --key=vars/cafe.laptop.local.key
   ignore_errors: true
 
 - name: Manage Cafe APP Deployment
