--- a/automation/roles/manage_app_deployment/files/cafe-secret.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: cafe-secret
 type: kubernetes.io/tls
-stringData:
+data:
   tls.crt:  "{{app-cert}}"
   tls.key: "{{app-key}}"
