--- a/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
+++ b/automation/roles/manage_nic_deployment/files/nginx-ingress.yaml
@@ -28,8 +28,8 @@ spec:
           containerPort: 443
         - name: readiness-port
           containerPort: 8081
-        - name: dashboard
-          containerPort: 9000          
+#        - name: dashboard
+#          containerPort: 9000          
         - name: prometheus
           containerPort: 9113
         readinessProbe:
