--- a/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
+++ b/automation/roles/manage_app_deployment/files/cafe-ingress.yaml
@@ -14,10 +14,10 @@ spec:
   # ingressClassName: nginx # use only with k8s version >= 1.18.0
   tls:
   - hosts:
-    - cafe.laptop.local
+    - cafe."{{app-domain}}"
     secretName: cafe-secret
   rules:
-  - host: cafe.laptop.local
+  - host: cafe."{{app-domain}}"
     http:
       paths:
       - path: /tea
